	dialog, diffutils, distcc, dmalloc, dnsmasq, fbv, file, gawk,
	gstreamer, gzip, intltool, ipsec-tools, iptables, libart,
	libfuse, libgpg-error, libidn, liblockfile, links, lmbench,
	lrzsz, make, module-init-tools, nbd, ncurses, netperf,
	ntfsprogs, openssl, php, qt, quagga, sqlite, sdl, sdl_mixer,
	sdl_ttf, squashfs, tn5250, usbutils, xkeyboard-config

	Removed packages: modutils, rxvt

	Issues resolved (http://bugs.uclibc.org):

	#401:  new package: ffmpeg
	#835:  Package Dataflashboot-1.05 does not compile with buildroot...
	#1213: Move .config into output directory
	#1753: lmbench: convert to generic package infrastructure
	#1771: Fakeroot and the target/generic/device_table.txt create bad...
	#1807: LZMA 4.32.7, Required header file(s) are missing
	#1813: xkeyboard-config fails to build because of intltool problem
	#1879: Bump iptables to 1.4.8
	#1885: Add a bunch of lua modules
	#1897: Bump libusb to 1.0.7
	#1903: Bump tn5250 to 0.17.4 and migrate to autotargets
	#1909: netperf-2.4.5 fails to build because of undeclared SOCK_DCCP
	#1927: Bump file to 5.03 and migrate to autotargets
	#1933: Bump gawk to 3.1.8 and migrate to autotargets
	#1945: PHP: add sqlite3 dependency when using external lib
	#1951: Bump openssl to 0.9.8o
	#1957: Bump sqlite to 3.6.23.1
	#1987: intltool: Fix spelling mistake
	#1999: Typo in path checking
	#2005: Bump dnsmasq to 2.55 and migrate to gentargets
	#2035: ipsec-tools-0.7.2 fails to build with gcc-4.4.x
	#2038: Bump ncurses to 5.7
	#2095: make gconfig: undefined reference to symbol 'dlsym@@GLIBC_2.2.5'

2010.05, Released May 30th, 2010:

	Fixes all over the tree.

	Updated/fixed packages: coreutils, hal, libcap,
	lockfile-progs, ncftp, xserver_xorg-server

	Issues resolved (http://bugs.uclibc.org):

	#1789: binutils fails to build for i386
	#1843: Fix libcap build failure
	#1855: XORG Keyboard driver fails to compile

2010.05-rc3, Released May 27th, 2010:

	Fixes all over the tree.
